# comp0078-assignment1

./: .gitignore  README.md  main.py  main.tex  pyproject.toml  submission.tex  test.ipynb
Scripts/: activate  activate.bat
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack
outputs/python/q1/: q1b.csv
outputs/q1/: q1b.csv  q1c.csv
outputs/q4/: performance.csv
outputs/q5/: optimal_gkrr_parameters.csv  q5a-optimal-params.csv  q5a-performance.csv  q5c-performance.csv  q5d-performance.csv  regression_report.csv
src/: constants.py
src/models/: helpers.py  kernels.py  knn.py  regression.py  regression_models.py
src/solutions/: q1.py  q2_and_3.py  q4.py  q4_and_5.py  q5.py  q6.py  q7.py  q8.py
